resolved layout issue

--- a/src/scss/Components/Screens/_aboutus.scss
+++ b/src/scss/Components/Screens/_aboutus.scss
@@ -190,11 +190,14 @@
 
 .card-container {
   text-align: center;
+
   margin-bottom: 20px;
 }
 
 .card-image {
   width: 160px;
   height: 160px;
+  padding: 10px;
+
   object-fit: cover;
 }
