--- a/src/scss/_footer.scss
+++ b/src/scss/_footer.scss
@@ -117,7 +117,7 @@ footer {
       font-size: 12px;
       position: absolute;
       bottom: 0;
-      width: 100%;
+      // width: 100%;
 
       height: 40px;
 
