--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -60,6 +60,6 @@
   overflow: auto;
 }
 
-body {
-  overflow-x: hidden;
-}
+// body {
+//   overflow-x: hidden;
+// }
